finished layout of all pages. Fixed some layout issues on UserPage

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@ body,
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
+  margin: 0px;
 }
 
 img {
@@ -100,7 +100,9 @@ Form Treatment
   width: 400px;
   max-width: 100%;
   padding: 25px;
-  margin: 0 auto 20px;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #efefef;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
